- Fixed messed up z-index for back button on posts - Fixed back button not going back home

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ body {
   font-size: 4em;
   color: white;
   cursor: pointer;
+  z-index: 99;
 }
 
 .post-content-text {
